Chrome: Inline editor's tools not visible on Drag & Drop. Fixes #3285

--- a/styles/web/common/editor.less
+++ b/styles/web/common/editor.less
@@ -25,6 +25,7 @@ table.k-editor
     cursor: move;
     padding-left: 0;
     padding-right: 3px;
+    box-shadow: none !important;
 }
 
 .k-editor .k-editor-toolbar-wrap
